--- a/contents/5/intro.qmd
+++ b/contents/5/intro.qmd
@@ -33,6 +33,9 @@ When we want to deal with classification problem, we may still use this regressi
 
 
 
+{{< include pytorch.qmd >}}
+
+
 
 {{< include multi.qmd >}}
 
