--- a/book.bib
+++ b/book.bib
@@ -7,7 +7,15 @@
   file      = {:2204/deep/Deep-Learning-with-PyTorch.pdf:PDF},
   url       = {https://www.manning.com/books/deep-learning-with-pytorch},
 }
-
+@Book{Godoy2022,
+  author    = {Daniel Voigt Godoy},
+  publisher = {https://leanpub.com/pytorch},
+  title     = {Deep Learning with PyTorch Step-by-Step: A Beginner's Guide},
+  year      = {2022},
+  isbn      = {9798485032760},
+  file      = {:2406/books/Deep Learning with PyTorch Step-by-Step A Beginner’s Guide.pdf:PDF},
+  url       = {https://leanpub.com/pytorch},
+}
 @Book{Bis2011,
   author    = {Bishop, Christopher M.},
   publisher = {Springer-Verlag New York Inc.},
